--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -23,7 +23,7 @@ commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 coverage[toml]==7.2.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 darglint==1.8.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-datasets[datasets]==2.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+datasets==2.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 debugpy==1.6.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 decorator==5.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 dill==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -47,13 +47,11 @@ imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 importlib-metadata==6.6.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 iniconfig==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipykernel==6.23.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel[notebook]==6.23.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipython==8.12.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipywidgets[notebook]==8.0.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipywidgets==8.0.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jedi==0.18.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 joblib==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-joblib[sklearn]==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyter-client==8.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyter-core==5.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyterlab-widgets==3.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -117,7 +115,7 @@ ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python
 ruamel-yaml==0.17.26 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ruff==0.0.252 ; python_full_version >= "3.8.1" and python_version < "3.12"
 safety==2.3.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
-scikit-learn[sklearn]==1.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+scikit-learn==1.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
 setuptools==67.7.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -149,7 +147,7 @@ torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tornado==6.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.65.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 traitlets==5.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-transformers[sentencepiece,tokenizers,torch]==4.29.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+transformers[sentencepiece,tokenizers,torch]==4.29.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tzdata==2023.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
