--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,13 +58,6 @@ torch = ">=1.13.1"
 matplotlib = "~3.5.3"
 tqdm = "^4.64.0"
 poethepoet = "^0.13.1"
-
-ipykernel = { extras = ["notebook"], version = "^6.19.2", optional = true }
-ipywidgets = { extras = ["notebook"], version = "^8.0.0rc2", optional = true }
-joblib = { extras = ["sklearn"], version = "^1.2.0", optional = true }
-scikit-learn = { extras = ["sklearn"], version = "^1.1.1", optional = true }
-scipy = { version = "^1.8.1", optional = true}
-datasets = { extras = ["datasets"], version = "^2.3.2", optional = true }
 nvidia-cublas-cu11 = { version = "11.10.3.66", platform = 'linux' }
 nvidia-cuda-cupti-cu11 = { version = "11.7.101", platform = 'linux' }
 nvidia-cuda-nvrtc-cu11 = { version = "11.7.99", platform = 'linux' }
@@ -76,6 +69,13 @@ nvidia-cusolver-cu11 = { version = "11.4.0.1", platform = 'linux' }
 nvidia-cusparse-cu11 = { version = "11.7.4.91", platform = 'linux' }
 nvidia-nccl-cu11 = { version = "2.14.3", platform = 'linux' }
 nvidia-nvtx-cu11 = { version = "11.7.91", platform = 'linux' }
+
+ipykernel = { version = "^6.19.2", optional = true }
+ipywidgets = { version = "^8.0.0rc2", optional = true }
+joblib = { version = "^1.2.0", optional = true }
+scikit-learn = { version = "^1.1.1", optional = true }
+scipy = { version = "^1.8.1", optional = true}
+datasets = { version = "^2.3.2", optional = true }
 
 [tool.poetry.group.docs]
 optional = true
