--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ ipywidgets = { version = "^8.0.0rc2", optional = true }
 joblib = { version = "^1.2.0", optional = true }
 scikit-learn = { version = "^1.1.1", optional = true }
 scipy = { version = "^1.8.1", optional = true}
-datasets = { version = "^2.3.2", optional = true }
+datasets = { version = ">=2.3.2", optional = true }
 
 [tool.poetry.group.docs]
 optional = true
