--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-accelerate==0.19.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+accelerate==0.20.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 aiohttp==3.8.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 aiosignal==1.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 alabaster==0.7.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -20,10 +20,10 @@ click==8.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 comm==0.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-coverage[toml]==7.2.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
+coverage[toml]==7.2.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 darglint==1.8.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-datasets==2.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+datasets==2.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 debugpy==1.6.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 decorator==5.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 dill==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -32,31 +32,31 @@ docutils==0.19 ; python_full_version >= "3.8.1" and python_version < "3.12"
 dparse==0.6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 exceptiongroup==1.1.1 ; python_full_version >= "3.8.1" and python_version < "3.11"
 executing==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-filelock==3.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-fonttools==4.39.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+filelock==3.12.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fonttools==4.40.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 frozenlist==1.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-fsspec==2023.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-fsspec[http]==2023.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fsspec==2023.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fsspec[http]==2023.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 furo==2022.12.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitdb==4.0.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitpython==3.1.31 ; python_full_version >= "3.8.1" and python_version < "3.12"
-huggingface-hub==0.14.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+huggingface-hub==0.15.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 identify==2.5.24 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-importlib-metadata==6.6.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
+importlib-metadata==6.7.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 iniconfig==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel==6.23.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipykernel==6.23.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipython==8.12.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipywidgets==8.0.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jedi==0.18.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 joblib==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-jupyter-client==8.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-jupyter-core==5.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+jupyter-client==8.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+jupyter-core==5.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyterlab-widgets==3.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-markupsafe==2.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+markupsafe==2.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib-inline==0.1.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.5.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 mpmath==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -79,7 +79,7 @@ nvidia-cusparse-cu11==11.7.4.91 ; python_full_version >= "3.8.1" and python_vers
 nvidia-nccl-cu11==2.14.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 nvidia-nvtx-cu11==11.7.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 packaging==21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pandas==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pandas==2.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 parso==0.8.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pastel==0.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pathspec==0.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -87,38 +87,38 @@ pbr==5.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pexpect==4.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pickleshare==0.7.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pillow==9.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-platformdirs==3.5.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pluggy==1.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+platformdirs==3.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pluggy==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 poethepoet==0.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pre-commit==2.21.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 prompt-toolkit==3.0.38 ; python_full_version >= "3.8.1" and python_version < "3.12"
-protobuf==3.20.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+protobuf==3.20.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 psutil==5.9.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ptyprocess==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pure-eval==0.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pyarrow==12.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pyarrow==12.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pycparser==2.21 ; python_full_version >= "3.8.1" and python_version < "3.12" and implementation_name == "pypy"
 pygments==2.15.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pyparsing==3.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pytest-cov==4.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pytest==7.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pyparsing==3.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pytest-cov==4.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pytest==7.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytz==2023.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version >= "3.8.1" and python_version < "3.12"
 pyyaml==6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pyzmq==25.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-regex==2023.5.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
-requests==2.30.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-responses==0.18.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pyzmq==25.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+regex==2023.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+requests==2.31.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 rich==10.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python_version < "3.12" and python_full_version >= "3.8.1"
-ruamel-yaml==0.17.26 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ruamel-yaml==0.17.32 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ruff==0.0.252 ; python_full_version >= "3.8.1" and python_version < "3.12"
+safetensors==0.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 safety==2.3.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scikit-learn==1.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools==67.7.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+setuptools==68.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 smmap==5.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 snowballstemmer==2.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -147,12 +147,12 @@ torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tornado==6.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.65.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 traitlets==5.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-transformers[sentencepiece,tokenizers,torch]==4.29.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+transformers[sentencepiece,tokenizers,torch]==4.30.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-typing-extensions==4.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+typing-extensions==4.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tzdata==2023.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-urllib3==2.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-virtualenv==20.23.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+urllib3==2.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+virtualenv==20.23.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wcwidth==0.2.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wheel==0.40.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 widgetsnbextension==4.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
