--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -29,8 +29,8 @@ decorator==5.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 dill==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 distlib==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 docutils==0.19 ; python_full_version >= "3.8.1" and python_version < "3.12"
-dparse==0.6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-exceptiongroup==1.1.1 ; python_full_version >= "3.8.1" and python_version < "3.11"
+dparse==0.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+exceptiongroup==1.1.2 ; python_full_version >= "3.8.1" and python_version < "3.11"
 executing==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 filelock==3.12.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fonttools==4.40.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -40,21 +40,21 @@ fsspec[http]==2023.6.0 ; python_full_version >= "3.8.1" and python_version < "3.
 furo==2022.12.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitdb==4.0.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitpython==3.1.31 ; python_full_version >= "3.8.1" and python_version < "3.12"
-huggingface-hub==0.15.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+huggingface-hub==0.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 identify==2.5.24 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 importlib-metadata==6.7.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 iniconfig==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel==6.23.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipykernel==6.24.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipython==8.12.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipywidgets==8.0.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipywidgets==8.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jedi==0.18.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-joblib==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+joblib==1.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyter-client==8.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyter-core==5.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-jupyterlab-widgets==3.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
+jupyterlab-widgets==3.0.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 markupsafe==2.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib-inline==0.1.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -66,7 +66,7 @@ mypy-extensions==1.0.0 ; python_full_version >= "3.8.1" and python_version < "3.
 nest-asyncio==1.5.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 networkx==3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 nodeenv==1.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-numpy==1.24.3 ; python_version < "3.12" and python_full_version >= "3.8.1"
+numpy==1.24.4 ; python_version < "3.12" and python_full_version >= "3.8.1"
 nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 nvidia-cuda-cupti-cu11==11.7.101 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
@@ -79,19 +79,19 @@ nvidia-cusparse-cu11==11.7.4.91 ; python_full_version >= "3.8.1" and python_vers
 nvidia-nccl-cu11==2.14.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 nvidia-nvtx-cu11==11.7.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 packaging==21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pandas==2.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pandas==2.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 parso==0.8.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pastel==0.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pathspec==0.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pbr==5.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pexpect==4.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pickleshare==0.7.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pillow==9.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pillow==10.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 platformdirs==3.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pluggy==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 poethepoet==0.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pre-commit==2.21.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-prompt-toolkit==3.0.38 ; python_full_version >= "3.8.1" and python_version < "3.12"
+prompt-toolkit==3.0.39 ; python_full_version >= "3.8.1" and python_version < "3.12"
 protobuf==3.20.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 psutil==5.9.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ptyprocess==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
@@ -101,7 +101,7 @@ pycparser==2.21 ; python_full_version >= "3.8.1" and python_version < "3.12" and
 pygments==2.15.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyparsing==3.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytest-cov==4.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pytest==7.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pytest==7.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytz==2023.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version >= "3.8.1" and python_version < "3.12"
@@ -115,7 +115,7 @@ ruamel-yaml==0.17.32 ; python_full_version >= "3.8.1" and python_version < "3.12
 ruff==0.0.252 ; python_full_version >= "3.8.1" and python_version < "3.12"
 safetensors==0.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 safety==2.3.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
-scikit-learn==1.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+scikit-learn==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
 setuptools==68.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -125,6 +125,7 @@ snowballstemmer==2.2.0 ; python_full_version >= "3.8.1" and python_version < "3.
 soupsieve==2.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx-basic-ng==1.0.0b1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx-copybutton==0.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+sphinx-design==0.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx-gitstamp==0.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx==5.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinxcontrib-applehelp==1.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -140,7 +141,6 @@ stevedore==5.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sympy==1.12 ; python_full_version >= "3.8.1" and python_version < "3.12"
 threadpoolctl==3.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tokenizers==0.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-toml==0.10.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torch==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -149,13 +149,13 @@ tqdm==4.65.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 traitlets==5.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 transformers[sentencepiece,tokenizers,torch]==4.30.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-typing-extensions==4.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+typing-extensions==4.7.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tzdata==2023.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 urllib3==2.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 virtualenv==20.23.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wcwidth==0.2.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wheel==0.40.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-widgetsnbextension==4.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
+widgetsnbextension==4.0.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
 xxhash==3.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 yarl==1.9.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 zipp==3.15.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
