--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,10 @@
-accelerate==0.21.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+accelerate==0.22.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 aiohttp==3.8.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 aiosignal==1.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 alabaster==0.7.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
 appnope==0.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Darwin" or python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "darwin"
 asttokens==2.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-async-timeout==4.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+async-timeout==4.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 attrs==23.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 babel==2.12.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 backcall==0.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -12,28 +12,28 @@ bandit==1.7.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 beautifulsoup4==4.12.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 black==22.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 captum==0.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-certifi==2023.5.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
+certifi==2023.7.22 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cffi==1.15.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and implementation_name == "pypy"
-cfgv==3.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+cfgv==3.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 charset-normalizer==3.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-click==8.1.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
+click==8.1.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
-comm==0.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+comm==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-coverage[toml]==7.2.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
+coverage[toml]==7.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 darglint==1.8.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-datasets==2.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-debugpy==1.6.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
+datasets==2.14.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+debugpy==1.6.7.post1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 decorator==5.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-dill==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
+dill==0.3.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 distlib==0.3.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 docutils==0.19 ; python_full_version >= "3.8.1" and python_version < "3.12"
 dparse==0.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-exceptiongroup==1.1.2 ; python_full_version >= "3.8.1" and python_version < "3.11"
+exceptiongroup==1.1.3 ; python_full_version >= "3.8.1" and python_version < "3.11"
 executing==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-filelock==3.12.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-fonttools==4.41.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+filelock==3.12.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fonttools==4.42.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 frozenlist==1.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fsspec==2023.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fsspec[http]==2023.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -41,29 +41,29 @@ furo==2022.12.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitdb==4.0.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitpython==3.1.32 ; python_full_version >= "3.8.1" and python_version < "3.12"
 huggingface-hub==0.16.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-identify==2.5.25 ; python_full_version >= "3.8.1" and python_version < "3.12"
+identify==2.5.27 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 importlib-metadata==6.8.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 iniconfig==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel==6.24.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipykernel==6.25.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipython==8.12.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipywidgets==8.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
-jedi==0.18.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipywidgets==8.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+jedi==0.19.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-joblib==1.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-jupyter-client==8.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+joblib==1.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+jupyter-client==8.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyter-core==5.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyterlab-widgets==3.0.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
-kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+kiwisolver==1.4.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 markupsafe==2.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib-inline==0.1.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.5.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 mpmath==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 multidict==6.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-multiprocess==0.70.14 ; python_full_version >= "3.8.1" and python_version < "3.12"
+multiprocess==0.70.15 ; python_full_version >= "3.8.1" and python_version < "3.12"
 mypy-extensions==1.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-nest-asyncio==1.5.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
+nest-asyncio==1.5.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 networkx==3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 nodeenv==1.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 numpy==1.24.4 ; python_version < "3.12" and python_full_version >= "3.8.1"
@@ -82,13 +82,13 @@ packaging==21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pandas==2.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 parso==0.8.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pastel==0.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pathspec==0.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pathspec==0.11.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pbr==5.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pexpect==4.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pickleshare==0.7.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pillow==10.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-platformdirs==3.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pluggy==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+platformdirs==3.10.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pluggy==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 poethepoet==0.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pre-commit==2.21.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 prompt-toolkit==3.0.39 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -96,29 +96,29 @@ protobuf==3.20.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 psutil==5.9.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ptyprocess==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pure-eval==0.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pyarrow==12.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pyarrow==13.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pycparser==2.21 ; python_full_version >= "3.8.1" and python_version < "3.12" and implementation_name == "pypy"
-pygments==2.15.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pyparsing==3.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pygments==2.16.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pyparsing==3.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytest-cov==4.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytest==7.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytz==2023.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version >= "3.8.1" and python_version < "3.12"
 pyyaml==6.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pyzmq==25.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-regex==2023.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pyzmq==25.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+regex==2023.8.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
 requests==2.31.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 rich==10.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python_version < "3.12" and python_full_version >= "3.8.1"
 ruamel-yaml==0.17.32 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ruff==0.0.252 ; python_full_version >= "3.8.1" and python_version < "3.12"
-safetensors==0.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+safetensors==0.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 safety==2.3.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scikit-learn==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools==68.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+setuptools==68.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 smmap==5.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 snowballstemmer==2.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -144,18 +144,18 @@ tokenizers==0.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torch==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-tornado==6.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-tqdm==4.65.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+tornado==6.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+tqdm==4.66.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 traitlets==5.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-transformers[sentencepiece,tokenizers,torch]==4.31.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+transformers[sentencepiece,tokenizers,torch]==4.32.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.7.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tzdata==2023.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 urllib3==2.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-virtualenv==20.24.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+virtualenv==20.24.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wcwidth==0.2.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
-wheel==0.40.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+wheel==0.41.2 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 widgetsnbextension==4.0.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
-xxhash==3.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+xxhash==3.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 yarl==1.9.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 zipp==3.16.2 ; python_full_version >= "3.8.1" and python_version < "3.10"
