--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,6 @@ classifiers = [  #! Update me
   "License :: OSI Approved :: Apache Software License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11"
@@ -45,17 +44,17 @@ classifiers = [  #! Update me
 "inseq" = "inseq.commands.cli:main"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.12"
+python = ">=3.9,<3.12"
 
 rich = ">=10.13.0"
 transformers =  { version = ">=4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
 protobuf = ">=3.20.1"
 captum = ">=0.6.0"
 numpy = ">=1.21.6"
-torchtyping = ">=0.1.4"
+jaxtyping = "^0.2.23"
 typeguard = "<=2.13.3"
 # Omitting future torch releases as they don't install nvidia dependencies: https://github.com/pytorch/pytorch/issues/100974
-torch = ">=2.0.0"
+torch = "2.0.0"
 matplotlib = ">=3.5.3"
 tqdm = ">=4.64.0"
 poethepoet = ">=0.13.1"
@@ -115,7 +114,7 @@ torch-cuda = "python -m pip install torch"
 
 [tool.mypy]
 # https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
-python_version = 3.8
+python_version = 3.9
 strict = true
 
 
@@ -190,6 +189,7 @@ ignore = [
     "E501", # line too long (handled by format)
     "E731", # do not assign a lambda expression, use a def
     "E741", # ambiguous variable name
+    "F722", # syntax error in forward annotation (as used by jaxtyping)
     "F821", # undefined name
     "PLR2004", # unnamed numerical constants used
     "PLR0913", # too many arguments
