--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
-accelerate==0.24.0 ; python_version >= "3.9" and python_version < "3.12"
-captum==0.6.0 ; python_version >= "3.9" and python_version < "3.12"
-certifi==2023.7.22 ; python_version >= "3.9" and python_version < "3.12"
-charset-normalizer==3.3.1 ; python_version >= "3.9" and python_version < "3.12"
-cmake==3.27.7 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+accelerate==0.25.0 ; python_version >= "3.9" and python_version < "3.12"
+captum==0.7.0 ; python_version >= "3.9" and python_version < "3.12"
+certifi==2023.11.17 ; python_version >= "3.9" and python_version < "3.12"
+charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "3.12"
+cmake==3.27.9 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.12" and platform_system == "Windows"
-contourpy==1.1.1 ; python_version >= "3.9" and python_version < "3.12"
+contourpy==1.2.0 ; python_version >= "3.9" and python_version < "3.12"
 cycler==0.12.1 ; python_version >= "3.9" and python_version < "3.12"
-filelock==3.13.0 ; python_version >= "3.9" and python_version < "3.12"
-fonttools==4.43.1 ; python_version >= "3.9" and python_version < "3.12"
+filelock==3.13.1 ; python_version >= "3.9" and python_version < "3.12"
+fonttools==4.46.0 ; python_version >= "3.9" and python_version < "3.12"
 fsspec==2023.10.0 ; python_version >= "3.9" and python_version < "3.12"
-huggingface-hub==0.17.3 ; python_version >= "3.9" and python_version < "3.12"
-idna==3.4 ; python_version >= "3.9" and python_version < "3.12"
-importlib-resources==6.1.0 ; python_version >= "3.9" and python_version < "3.10"
-jaxtyping==0.2.23 ; python_version >= "3.9" and python_version < "3.12"
+huggingface-hub==0.19.4 ; python_version >= "3.9" and python_version < "3.12"
+idna==3.6 ; python_version >= "3.9" and python_version < "3.12"
+importlib-resources==6.1.1 ; python_version >= "3.9" and python_version < "3.10"
+jaxtyping==0.2.24 ; python_version >= "3.9" and python_version < "3.12"
 jinja2==3.1.2 ; python_version >= "3.9" and python_version < "3.12"
 kiwisolver==1.4.5 ; python_version >= "3.9" and python_version < "3.12"
-lit==17.0.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+lit==17.0.6 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 markdown-it-py==3.0.0 ; python_version >= "3.9" and python_version < "3.12"
 markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "3.12"
-matplotlib==3.8.0 ; python_version >= "3.9" and python_version < "3.12"
+matplotlib==3.8.2 ; python_version >= "3.9" and python_version < "3.12"
 mdurl==0.1.2 ; python_version >= "3.9" and python_version < "3.12"
 mpmath==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
 networkx==3.2.1 ; python_version >= "3.9" and python_version < "3.12"
-numpy==1.26.1 ; python_version >= "3.9" and python_version < "3.12"
+numpy==1.26.2 ; python_version >= "3.9" and python_version < "3.12"
 nvidia-cublas-cu11==11.10.3.66 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
 nvidia-cuda-cupti-cu11==11.7.101 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
 nvidia-cuda-nvrtc-cu11==11.7.99 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
@@ -37,30 +37,30 @@ nvidia-nvtx-cu11==11.7.91 ; python_version >= "3.9" and python_version < "3.12" 
 packaging==23.2 ; python_version >= "3.9" and python_version < "3.12"
 pastel==0.2.1 ; python_version >= "3.9" and python_version < "3.12"
 pillow==10.1.0 ; python_version >= "3.9" and python_version < "3.12"
-poethepoet==0.24.1 ; python_version >= "3.9" and python_version < "3.12"
-protobuf==4.24.4 ; python_version >= "3.9" and python_version < "3.12"
+poethepoet==0.24.4 ; python_version >= "3.9" and python_version < "3.12"
+protobuf==4.25.1 ; python_version >= "3.9" and python_version < "3.12"
 psutil==5.9.6 ; python_version >= "3.9" and python_version < "3.12"
-pygments==2.16.1 ; python_version >= "3.9" and python_version < "3.12"
+pygments==2.17.2 ; python_version >= "3.9" and python_version < "3.12"
 pyparsing==3.1.1 ; python_version >= "3.9" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "3.12"
 pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "3.12"
 regex==2023.10.3 ; python_version >= "3.9" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.9" and python_version < "3.12"
-rich==13.6.0 ; python_version >= "3.9" and python_version < "3.12"
-safetensors==0.4.0 ; python_version >= "3.9" and python_version < "3.12"
+rich==13.7.0 ; python_version >= "3.9" and python_version < "3.12"
+safetensors==0.4.1 ; python_version >= "3.9" and python_version < "3.12"
+scipy==1.11.4 ; python_version >= "3.9" and python_version < "3.12"
 sentencepiece==0.1.99 ; python_version >= "3.9" and python_version < "3.12"
-setuptools-scm==8.0.4 ; python_version >= "3.9" and python_version < "3.12"
-setuptools==68.2.2 ; python_version >= "3.9" and python_version < "3.12"
+setuptools==69.0.2 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
 six==1.16.0 ; python_version >= "3.9" and python_version < "3.12"
 sympy==1.12 ; python_version >= "3.9" and python_version < "3.12"
-tokenizers==0.14.1 ; python_version >= "3.9" and python_version < "3.12"
+tokenizers==0.15.0 ; python_version >= "3.9" and python_version < "3.12"
 tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.12"
 torch==2.0.0 ; python_version >= "3.9" and python_version < "3.12"
 tqdm==4.66.1 ; python_version >= "3.9" and python_version < "3.12"
-transformers[sentencepiece,tokenizers,torch]==4.34.1 ; python_version >= "3.9" and python_version < "3.12"
+transformers[sentencepiece,tokenizers,torch]==4.35.2 ; python_version >= "3.9" and python_version < "3.12"
 triton==2.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 typeguard==2.13.3 ; python_version >= "3.9" and python_version < "3.12"
 typing-extensions==4.8.0 ; python_version >= "3.9" and python_version < "3.12"
-urllib3==2.0.7 ; python_version >= "3.9" and python_version < "3.12"
-wheel==0.41.3 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+urllib3==2.1.0 ; python_version >= "3.9" and python_version < "3.12"
+wheel==0.42.0 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
 zipp==3.17.0 ; python_version >= "3.9" and python_version < "3.10"
