--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,74 @@
-accelerate==0.25.0 ; python_version >= "3.9" and python_version < "3.12"
+accelerate==0.26.1 ; python_version >= "3.9" and python_version < "3.12"
 captum==0.7.0 ; python_version >= "3.9" and python_version < "3.12"
 certifi==2023.11.17 ; python_version >= "3.9" and python_version < "3.12"
 charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "3.12"
-cmake==3.27.9 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.12" and platform_system == "Windows"
 contourpy==1.2.0 ; python_version >= "3.9" and python_version < "3.12"
 cycler==0.12.1 ; python_version >= "3.9" and python_version < "3.12"
 filelock==3.13.1 ; python_version >= "3.9" and python_version < "3.12"
-fonttools==4.46.0 ; python_version >= "3.9" and python_version < "3.12"
-fsspec==2023.10.0 ; python_version >= "3.9" and python_version < "3.12"
-huggingface-hub==0.19.4 ; python_version >= "3.9" and python_version < "3.12"
+fonttools==4.47.2 ; python_version >= "3.9" and python_version < "3.12"
+fsspec==2023.12.2 ; python_version >= "3.9" and python_version < "3.12"
+huggingface-hub==0.20.2 ; python_version >= "3.9" and python_version < "3.12"
 idna==3.6 ; python_version >= "3.9" and python_version < "3.12"
 importlib-resources==6.1.1 ; python_version >= "3.9" and python_version < "3.10"
-jaxtyping==0.2.24 ; python_version >= "3.9" and python_version < "3.12"
-jinja2==3.1.2 ; python_version >= "3.9" and python_version < "3.12"
+jaxtyping==0.2.25 ; python_version >= "3.9" and python_version < "3.12"
+jinja2==3.1.3 ; python_version >= "3.9" and python_version < "3.12"
 kiwisolver==1.4.5 ; python_version >= "3.9" and python_version < "3.12"
-lit==17.0.6 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 markdown-it-py==3.0.0 ; python_version >= "3.9" and python_version < "3.12"
 markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "3.12"
 matplotlib==3.8.2 ; python_version >= "3.9" and python_version < "3.12"
 mdurl==0.1.2 ; python_version >= "3.9" and python_version < "3.12"
 mpmath==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
 networkx==3.2.1 ; python_version >= "3.9" and python_version < "3.12"
-numpy==1.26.2 ; python_version >= "3.9" and python_version < "3.12"
-nvidia-cublas-cu11==11.10.3.66 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
-nvidia-cuda-cupti-cu11==11.7.101 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
-nvidia-cuda-nvrtc-cu11==11.7.99 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
-nvidia-cuda-runtime-cu11==11.7.99 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
-nvidia-cudnn-cu11==8.5.0.96 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
-nvidia-cufft-cu11==10.9.0.58 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
-nvidia-curand-cu11==10.2.10.91 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
-nvidia-cusolver-cu11==11.4.0.1 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
-nvidia-cusparse-cu11==11.7.4.91 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
-nvidia-nccl-cu11==2.14.3 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
-nvidia-nvtx-cu11==11.7.91 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+numpy==1.26.3 ; python_version >= "3.9" and python_version < "3.12"
+nvidia-cublas-cu11==11.11.3.6 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-cuda-cupti-cu11==11.8.87 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-cuda-nvrtc-cu11==11.8.89 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cuda-nvrtc-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-cuda-runtime-cu11==11.8.89 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cuda-runtime-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-cudnn-cu11==8.9.6.50 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cudnn-cu12==8.9.2.26 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-cufft-cu11==10.9.0.58 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cufft-cu12==11.0.2.54 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-curand-cu11==10.3.0.86 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-curand-cu12==10.3.2.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-cusolver-cu11==11.4.1.48 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cusolver-cu12==11.4.5.107 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-cusparse-cu11==11.7.5.86 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-nccl-cu11==2.19.3 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-nccl-cu12==2.18.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-nvjitlink-cu12==12.3.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+nvidia-nvtx-cu11==11.8.86 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "linux"
+nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 packaging==23.2 ; python_version >= "3.9" and python_version < "3.12"
 pastel==0.2.1 ; python_version >= "3.9" and python_version < "3.12"
-pillow==10.1.0 ; python_version >= "3.9" and python_version < "3.12"
+pillow==10.2.0 ; python_version >= "3.9" and python_version < "3.12"
 poethepoet==0.24.4 ; python_version >= "3.9" and python_version < "3.12"
-protobuf==4.25.1 ; python_version >= "3.9" and python_version < "3.12"
-psutil==5.9.6 ; python_version >= "3.9" and python_version < "3.12"
+protobuf==4.25.2 ; python_version >= "3.9" and python_version < "3.12"
+psutil==5.9.7 ; python_version >= "3.9" and python_version < "3.12"
 pygments==2.17.2 ; python_version >= "3.9" and python_version < "3.12"
 pyparsing==3.1.1 ; python_version >= "3.9" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "3.12"
 pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "3.12"
-regex==2023.10.3 ; python_version >= "3.9" and python_version < "3.12"
+regex==2023.12.25 ; python_version >= "3.9" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.9" and python_version < "3.12"
 rich==13.7.0 ; python_version >= "3.9" and python_version < "3.12"
 safetensors==0.4.1 ; python_version >= "3.9" and python_version < "3.12"
 scipy==1.11.4 ; python_version >= "3.9" and python_version < "3.12"
 sentencepiece==0.1.99 ; python_version >= "3.9" and python_version < "3.12"
-setuptools==69.0.2 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
 six==1.16.0 ; python_version >= "3.9" and python_version < "3.12"
 sympy==1.12 ; python_version >= "3.9" and python_version < "3.12"
 tokenizers==0.15.0 ; python_version >= "3.9" and python_version < "3.12"
 tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.12"
-torch==2.0.0 ; python_version >= "3.9" and python_version < "3.12"
+torch==2.1.2 ; python_version >= "3.9" and python_version < "3.12"
 tqdm==4.66.1 ; python_version >= "3.9" and python_version < "3.12"
-transformers[sentencepiece,tokenizers,torch]==4.35.2 ; python_version >= "3.9" and python_version < "3.12"
-triton==2.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
+transformers[sentencepiece,tokenizers,torch]==4.36.2 ; python_version >= "3.9" and python_version < "3.12"
+triton==2.1.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.9" and python_version < "3.12"
 typeguard==2.13.3 ; python_version >= "3.9" and python_version < "3.12"
-typing-extensions==4.8.0 ; python_version >= "3.9" and python_version < "3.12"
+typing-extensions==4.9.0 ; python_version >= "3.9" and python_version < "3.12"
 urllib3==2.1.0 ; python_version >= "3.9" and python_version < "3.12"
-wheel==0.42.0 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
 zipp==3.17.0 ; python_version >= "3.9" and python_version < "3.10"
