--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,13 +7,8 @@ include *.yml
 recursive-include inseq *.py
 
 exclude Makefile
-# Exclude tests from package
-prune tests
-# Exclude the documentation files
-prune docs
-# Exclude the example files
-prune examples
-# Exclude notebooks
-prune notebooks
-# Exclude utils
 prune .github
+prune docker
+prune docs
+prune examples
+prune tests
