--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,7 @@
 FROM python:3.10.0-slim-buster
 
 ENV LANG=C.UTF-8 \
-  LC_ALL=C.UTF-8 \
-  PATH="${PATH}:/root/.poetry/bin"
+  LC_ALL=C.UTF-8
 
 RUN apt-get update && \
   apt-get install -y --no-install-recommends \
@@ -11,15 +10,9 @@ RUN apt-get update && \
 
 COPY pyproject.toml ./
 
-# Install Poetry
-RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | POETRY_HOME=/opt/poetry python && \
-    cd /usr/local/bin && \
-    ln -s /opt/poetry/bin/poetry && \
-    poetry config virtualenvs.create false
-
-# Allow installing dev dependencies to run tests
-ARG INSTALL_DEV=false
-RUN bash -c "if [ $INSTALL_DEV == 'true' ] ; then poetry install --no-root ; else poetry install --no-root --no-dev ; fi"
+# Install uv
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh &&
+RUN bash -c "uv venv && source .venv/bin/activate && uv pip install -r requirements.txt"
 
 CMD mkdir -p /workspace
 WORKDIR /workspace
