--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,121 +1,102 @@
-# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
-[build-system]
-requires = ["poetry_core>=1.6.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
+[project]
 name = "inseq"
 version = "0.6.0.dev0"
 description = "Interpretability for Sequence Generation Models 🔍"
 readme = "README.md"
-authors = ["The Inseq Team"]
-maintainers = ["gsarti <gabriele.sarti996@gmail.com>"]
-license = "Apache Software License 2.0"
-repository = "https://github.com/inseq-team/inseq"
-homepage = "https://github.com/inseq-team/inseq"
-
-# Keywords description https://python-poetry.org/docs/pyproject/#keywords
-keywords = ["seq2seq", "transformers", "natural language processing", "XAI", "explainable ai", "interpretability"]
-
+requires-python = ">=3.9"
+license = {file = "LICENSE"}
+keywords = ["generative AI", "transformers", "natural language processing", "XAI", "explainable ai", "interpretability", "feature attribution", "machine translation"]
+authors = [
+  {name = "The Inseq Team"},
+  {email = "info@inseq.org"}
+]
+maintainers = [
+  {name = "Gabriele Sarti"},
+  {email = "gabriele.sarti996@gmail.com"}
+]
 # Pypi classifiers: https://pypi.org/classifiers/
-classifiers = [  #! Update me
+classifiers = [
   "Development Status :: 3 - Alpha",
   "Environment :: Console",
   "Environment :: GPU",
   "Environment :: GPU :: NVIDIA CUDA",
-  "Environment :: GPU :: NVIDIA CUDA :: 11.3",
   "Framework :: Jupyter",
-  "Framework :: Sphinx",
+  "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
-  "Operating System :: OS Independent",
-  "Topic :: Scientific/Engineering :: Artificial Intelligence",
-  "Topic :: Scientific/Engineering :: Visualization",
   "License :: OSI Approved :: Apache Software License",
+  "Operating System :: OS Independent",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11"
-
+  "Programming Language :: Python :: 3.11",
+  "Topic :: Scientific/Engineering :: Artificial Intelligence",
+  "Topic :: Scientific/Engineering :: Visualization",
+  "Typing :: Typed"
+]
+dependencies = [
+  "rich>=10.13.0",
+  "transformers[sentencepiece,tokenizers]>=4.22.0",
+  "protobuf>=3.20.1",
+  "captum>=0.7.0",
+  "numpy>=1.21.6",
+  "jaxtyping>=0.2.25",
+  "typeguard<=2.13.3",
+  "torch>=2.1.1",
+  "matplotlib>=3.5.3",
+  "tqdm>=4.64.0",
+  "nvidia-cublas-cu11>=11.10.3.66; sys_platform=='Linux'",
+  "nvidia-cuda-cupti-cu11>=11.7.101; sys_platform=='Linux'",
+  "nvidia-cuda-nvrtc-cu11>=11.7.99; sys_platform=='Linux'",
+  "nvidia-cuda-runtime-cu11>=11.7.99; sys_platform=='Linux'",
+  "nvidia-cudnn-cu11>=8.5.0.96; sys_platform=='Linux'",
+  "nvidia-cufft-cu11>=10.9.0.58; sys_platform=='Linux'",
+  "nvidia-curand-cu11>=10.2.10.91; sys_platform=='Linux'",
+  "nvidia-cusolver-cu11>=11.4.0.1; sys_platform=='Linux'",
+  "nvidia-cusparse-cu11>=11.7.4.91; sys_platform=='Linux'",
+  "nvidia-nccl-cu11>=2.14.3; sys_platform=='Linux'",
+  "nvidia-nvtx-cu11>=11.7.91; sys_platform=='Linux'",
 ]
 
-[tool.poetry.scripts]
-# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
+[project.optional-dependencies]
+docs = [
+  "sphinx>=5.3.0",
+  "sphinxemoji>=0.2.0",
+  "sphinxext-opengraph>=0.4.2",
+  "sphinx-copybutton>=0.4.0",
+  "sphinx-gitstamp>=0.3.2",
+  "sphinx-design>=0.4.1",
+  "furo>=2022.12.7"
+]
+lint = [
+  "bandit>=1.7.4",
+  "safety>=2.2.0",
+  "pydoclint>=0.4.0",
+  "pre-commit>=2.19.0",
+  "pytest>=7.2.0",
+  "pytest-cov>=4.0.0",
+  "ruff>=0.2.0"
+]
+sklearn = [
+  "scikit-learn>=1.4.0",
+  "joblib>=1.3.2"
+]
+datasets = [
+  "datasets>=2.17.0"
+]
+notebook = [
+  "ipykernel>=6.29.2",
+  "ipywidgets>=8.1.2"
+]
+
+[project.urls]
+homepage = "https://github.com/inseq-team/inseq"
+documentation = "https://inseq.org"
+repository = "https://github.com/inseq-team/inseq"
+changelog = "https://github.com/inseq-team/inseq/blob/main/CHANGELOG.md"
+
+[project.scripts]
 "inseq" = "inseq.commands.cli:main"
-
-[tool.poetry.dependencies]
-python = ">=3.9,<3.12"
-
-rich = ">=10.13.0"
-transformers =  { version = ">=4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
-protobuf = ">=3.20.1"
-captum = ">=0.6.0"
-numpy = ">=1.21.6"
-jaxtyping = "^0.2.23"
-typeguard = "<=2.13.3"
-torch = ">2.1.1"
-matplotlib = ">=3.5.3"
-tqdm = ">=4.64.0"
-poethepoet = ">=0.13.1"
-nvidia-cublas-cu11 = { version = ">=11.10.3.66", platform = 'linux' }
-nvidia-cuda-cupti-cu11 = { version = ">=11.7.101", platform = 'linux' }
-nvidia-cuda-nvrtc-cu11 = { version = ">=11.7.99", platform = 'linux' }
-nvidia-cuda-runtime-cu11 = { version = ">=11.7.99", platform = 'linux' }
-nvidia-cudnn-cu11 = { version = ">=8.5.0.96", platform = 'linux' }
-nvidia-cufft-cu11 = { version = ">=10.9.0.58", platform = 'linux' }
-nvidia-curand-cu11 = { version = ">=10.2.10.91", platform = 'linux' }
-nvidia-cusolver-cu11 = { version = ">=11.4.0.1", platform = 'linux' }
-nvidia-cusparse-cu11 = { version = ">=11.7.4.91", platform = 'linux' }
-nvidia-nccl-cu11 = { version = ">=2.14.3", platform = 'linux' }
-nvidia-nvtx-cu11 = { version = ">=11.7.91", platform = 'linux' }
-
-ipykernel = { version = ">=6.19.2", optional = true }
-ipywidgets = { version = ">=8.0.0rc2", optional = true }
-joblib = { version = ">=1.2.0", optional = true }
-scikit-learn = { version = ">=1.1.1", optional = true }
-scipy = { version = ">=1.8.1", optional = true}
-datasets = { version = ">=2.3.2", optional = true }
-
-[tool.poetry.group.docs]
-optional = true
-
-[tool.poetry.group.docs.dependencies]
-sphinx = ">=5.3.0"
-sphinxemoji = ">=0.2.0"
-sphinxext-opengraph = ">=0.4.2"
-sphinx-copybutton = ">=0.4.0"
-sphinx-gitstamp = ">=0.3.2"
-sphinx-design = ">=0.4.1"
-furo = ">=2022.12.7"
-
-[tool.poetry.group.lint]
-optional = true
-
-[tool.poetry.group.lint.dependencies]
-bandit = ">=1.7.4"
-safety = ">=2.2.0"
-darglint = ">=1.8.1"
-pre-commit = ">=2.19.0"
-pytest = ">=7.2.0"
-pytest-cov = ">=4.0.0"
-ruff  = ">=0.1.2"
-
-[tool.poetry.group.jax]
-optional = true
-
-[tool.poetry.group.jax.dependencies]
-jax = ">=0.4.20"
-jaxlib = ">=0.4.20"
-
-[tool.poetry.extras]
-sklearn = ["scikit-learn", "joblib"]
-datasets = ["datasets"]
-notebook = ["ipykernel", "ipywidgets"]
-
-[tool.poe.tasks]
-upgrade-pip = "python -m pip install --upgrade pip"
-torch-cpu = "python -m pip install torch --index-url https://download.pytorch.org/whl/cpu"
-torch-cuda = "python -m pip install torch"
 
 
 [tool.mypy]
@@ -131,13 +112,10 @@ testpaths = "tests"
 python_files = "test_*.py"
 norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
 doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
-
 markers = [
   "slow",
   "require_cuda_gpu"
 ]
-
-# Extra options:
 addopts = [
   "--strict-markers",
   "--tb=short",
@@ -146,6 +124,7 @@ addopts = [
   "--disable-pytest-warnings",
   "--color=yes"
 ]
+
 
 [tool.coverage.run]
 parallel = true
@@ -165,9 +144,15 @@ exclude_lines = [
     "raise NotImplementedError",
 ]
 
+
 [tool.bandit]
 targets = ["inseq"]
 skips = ["B301"]
+
+
+[tool.setuptools]
+packages = ["inseq"]
+
 
 [tool.ruff]
 target-version = "py39"
@@ -219,7 +204,9 @@ select = [
 ]
 src = ["inseq", "examples", "tests"]
 extend-include = ["*.ipynb"]
-
+external = [
+  "DOC",  # pydoclint
+]
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
@@ -237,3 +224,9 @@ keep-runtime-typing = true
 
 [tool.ruff.pydocstyle]
 convention = "google"
+
+
+[tool.pydoclint]
+style = 'google'
+exclude = '\.git|\.tox|tests/data|some_script\.py'
+require-return-section-when-returning-nothing = true
