Added multithread support for running tests with pytest-xdist

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Run fast tests
       run: |
-        make fast-test
+        make fast-test-ci
 
     - name: Run safety checks
       run: |
