--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ lint = [
   "pre-commit>=2.19.0",
   "pytest>=7.2.0",
   "pytest-cov>=4.0.0",
+  "pytest-xdist>=3.5.0",
   "ruff>=0.2.0"
 ]
 sklearn = [
