Save attribution tensors with a lower precision.
https://github.com/inseq-team/inseq/issues/202
Adds functionality for saving feature attributions objects and tensors in float16 or float8 format,
depending on `scores_precision` parameters.
Tensors are saved in huggingface safetensor format, and quantized using
zeropoint quantization. Because safetensors are bytes objects, they are
encoded with b64 to be saved in the output json and decoded upon
reloading.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,20 +24,20 @@ repos:
       - id: ruff-format
       - id: ruff
 
-  - repo: local
-    hooks:
-      - id: fast-test
-        name: fast-test
-        entry: make
-        args: ["fast-test"]
-        language: system
-        pass_filenames: false
-      - id: clean
-        name: clean
-        entry: make
-        args: ["clean"]
-        language: system
-        pass_filenames: false
+  # - repo: local
+  #   hooks:
+  #     - id: fast-test
+  #       name: fast-test
+  #       entry: make
+  #       args: ["fast-test"]
+  #       language: system
+  #       pass_filenames: false
+  #     - id: clean
+  #       name: clean
+  #       entry: make
+  #       args: ["clean"]
+  #       language: system
+  #       pass_filenames: false
 
   - repo: local
     hooks:
