Fix multi-gpu inference and duplicate BOS issue for decoder-only (#280)
* Fix skip special tokens if pre-specified in prompt

* Move attentions to cpu preemptively

* Add rescale and readme changes

--- a/inseq/models/model_config.yaml
+++ b/inseq/models/model_config.yaml
@@ -20,6 +20,9 @@ FalconForCausalLM:
 GemmaForCausalLM:
     self_attention_module: "self_attn"
     value_vector: "value_states"
+Gemma2ForCausalLM:
+    self_attention_module: "self_attn"
+    value_vector: "value_states"
 GPTBigCodeForCausalLM:
     self_attention_module: "attn"
     value_vector: "value"
