--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -190,6 +190,7 @@ numpy==1.26.4
     #   scikit-learn
     #   scipy
     #   transformers
+    #   treescope
 packaging==23.2
     # via
     #   datasets
@@ -401,6 +402,8 @@ traitlets==5.14.1
     #   jupyter-core
     #   matplotlib-inline
 transformers==4.38.1
+    # via inseq (pyproject.toml)
+treescope==0.1.0
     # via inseq (pyproject.toml)
 typeguard==2.13.3
     # via
