--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "inseq"
 version = "0.7.0.dev0"
 description = "Interpretability for Sequence Generation Models 🔍"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = {file = "LICENSE"}
 keywords = ["generative AI", "transformers", "natural language processing", "XAI", "explainable ai", "interpretability", "feature attribution", "machine translation"]
 authors = [
@@ -31,7 +31,6 @@ classifiers = [
   "Operating System :: OS Independent",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
@@ -50,6 +49,7 @@ dependencies = [
   "torch>=2.0",
   "matplotlib>=3.5.3",
   "tqdm>=4.64.0",
+  "treescope>=0.1.0",
   "nvidia-cublas-cu11>=11.10.3.66; sys_platform=='Linux'",
   "nvidia-cuda-cupti-cu11>=11.7.101; sys_platform=='Linux'",
   "nvidia-cuda-nvrtc-cu11>=11.7.99; sys_platform=='Linux'",
@@ -110,7 +110,7 @@ changelog = "https://github.com/inseq-team/inseq/blob/main/CHANGELOG.md"
 
 [tool.mypy]
 # https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
-python_version = "3.9"
+python_version = "3.10"
 strict = true
 
 
@@ -164,7 +164,7 @@ packages = ["inseq"]
 
 
 [tool.ruff]
-target-version = "py39"
+target-version = "py310"
 exclude = [
   ".git",
   ".vscode",
